# Jeu-de-la-vie

./: .gitignore  CMakeLists.txt  Makefile  README.md  aide_infoGit.md  main  main.cpp
Diagrammes/: DiagrammeActivité.md  DiagrammeSéquence.md
GUI/: GUI.cpp
cellule/: Cell.cpp  Cellule.cpp  Cellule.h
core/: appManager.cpp  appManager.hpp  automate.hpp  cmd.cpp  cmd.hpp  gameEngine.cpp  gameEngine.hpp
core/main/: cell.hpp  fileManager.hpp  grid.hpp  position.hpp  rule.hpp  stateManager.hpp
core/renderer/: console.cpp  console.hpp  display.hpp  displayConsole.hpp  displayGraphic.hpp  graphic.cpp  graphic.hpp
core/src/: fileManager.cpp  fileManager.hpp  grid.cpp  grid.hpp
core/src/cells/: cell.cpp  cell.hpp  cellObstacle.cpp  cellObstacle.hpp  cellSimple.cpp  cellSimple.hpp  cellState.hpp
core/src/rules/: conwayRule.cpp  conwayRule.hpp  rule.cpp  rule.hpp
data/config/: columnErrorConfig.txt  config.txt  rowErrorConfig.txt  valueErrorConfig.txt
diagrammes/: Diagramme d'états.md  Diagramme de Classe.md  Diagramme de cas d'utilisation.md  Diagramme de séquence.md
grille/: Grid.cpp  Grille.cpp  Grille.h  GrilleClassique.cpp  GrilleClassique.h
jeu/: Game.cpp  Game.h
rule/: Rule.cpp
test_unitaire/: tester  tester.cpp
test_unitaire/expectedOutputs/: test1_out.txt  test2_out.txt  test3_out.txt
test_unitaire/inputs/: test1.txt  test2.txt  test3.txt
